added nick command added 2 new placeholders added new options on config